# FINM32700_Project_Phase1

./: CMakeLists.txt  README.md  base.cpp
benchmarks/: phase2_1_benchmark_linalg_test.cpp  phase2_2_cache_test.cpp  phase2_3_alignment_test.cpp  phase2_3_forced_intrinsic_test.cpp  phase2_4_inline_test.cpp  phase2_6_optimization_test.cpp
include/: linalg.h  linalg.hpp  linalg_inline.hpp
src/: linalg.cpp
tests/: benchmark.cpp  main.cpp  test_linalg.cpp
